--- a/frontend/src/app/components/artist-detail/artist-detail.component.html
+++ b/frontend/src/app/components/artist-detail/artist-detail.component.html
@@ -1,5 +1,5 @@
 <section class="artists-detail">
-<div class="text-center"><h4>Artist Details</h4></div>
+<div class="text-center"><h4>{{ artistInfo.name }}</h4></div>
 <p>
 <a class="btn btn-primary" routerLink="tracks">Tracks</a>&nbsp;&nbsp;
 <a class="btn btn-primary" routerLink="albums">Albums</a>
