--- a/frontend/src/app/components/artist-tracks/artist-tracks.component.html
+++ b/frontend/src/app/components/artist-tracks/artist-tracks.component.html
@@ -1,3 +1,17 @@
-<p>
-  artist-tracks works!
-</p>
+<section class="artists">
+<div>All Tracks</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let track of tracks; let idx = index;">
+      <th scope="row">{{ idx+1 }}</th>
+      <td>{{ track.name }}</td>
+    </tr>
+  </tbody>
+</table>
+</section>
