--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -1,6 +1,21 @@
 <section class="artists">
-<div class="text-center"><h4>Artists</h4></div>
-<table class="table table-striped">
+<div class="row">  
+<div class="col-lg-8 text-center"><h4>Artists</h4></div>
+<div class="col-lg-4 text-center">
+  <div class="row">
+  <div class="col-lg-2">
+    <label class="form-control-label">Search</label>
+  </div>
+    <div class="col-lg-10">
+      <input type="text" class="form-control" (keyup)="doSearch()" [(ngModel)]="term" placeholder="Enter search term">
+    </div>
+  </div>
+</div>
+</div>
+<div class="mt-2 text-center" *ngIf="loading">
+<img src="assets/images/30.gif" alt="loading">
+</div>
+<table class="table table-striped mt-2" *ngIf="loading == false">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -9,9 +24,16 @@
   </thead>
   <tbody>
     <tr *ngFor="let artist of artists; let idx = index;">
-      <th scope="row">{{ idx+1 }}</th>
+      <th scope="row">{{ startNumber + (idx+1) }}</th>
       <td><a routerLink="/artists/{{artist.id}}">{{ artist.name }}</a></td>
     </tr>
   </tbody>
 </table>
+
+<div class="row" *ngIf="artists.length > 0">
+  <div class="col-xs-12 col-12">
+    <pagination [totalItems]="totalCount" (pageChanged)="pageChanged($event)"></pagination>
+  </div>
+</div>
+
 </section>
