--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -20,8 +20,11 @@
 					<div class="col-sm-10 col-lg-2">
 						<button type="submit" (click)="doLogin()" class="btn btn-primary">Sign in</button>
 					</div>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<span *ngIf="errors.credentials" class="text-danger">{{ errors.credentials }}</span>
+					</div>
+					<div class="col-sm-10 col-lg-2">
+						<button type="submit" routerLink="/signup" class="btn btn-success">Signup</button>
 					</div>
 				</div>
 			</form>
