--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,3 +1,34 @@
-<p>
-  signup works!
-</p>
+<div class="row">
+	<div class="offset-2 col-lg-8 mt-4">
+		<div class="card">
+			<h5 class="card-header">Signup</h5>
+			<div class="card-body">
+			<form #loginForm="ngForm">
+				<div class="form-group row">
+					<label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+					<div class="col-sm-10">
+						<input type="email" class="form-control" #email name="email" [(ngModel)]="form.email" id="inputEmail3" placeholder="Email">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+					<div class="col-sm-10">
+						<input type="password" class="form-control" #password name="password" [(ngModel)]="form.password" id="inputPassword3" placeholder="Password">
+					</div>
+				</div>
+				<div class="form-group row">
+					<div class="col-sm-10 col-lg-2">
+						<button type="submit" (click)="doLogin()" class="btn btn-primary">Signup</button>
+					</div>
+					<div class="col-lg-8">
+						<span *ngIf="errors.credentials" class="text-danger">{{ errors.credentials }}</span>
+					</div>
+					<div class="col-sm-10 col-lg-2">
+						<button type="submit" routerLink="/login" class="btn btn-success">Login</button>
+					</div>
+				</div>
+			</form>
+			</div>
+		</div>
+	</div>
+</div>
