--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,3 +1,26 @@
-<p>
-  home works!
-</p>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th style="width: 20%">
+            Name
+        </th>
+        <th style="width: 50%">
+            Email
+        </th>
+        <th style="width: 10%">
+            Age
+        </th>
+        <th style="width: 20%">
+            City
+        </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let item of data">
+        <td>{{item.name}}</td>
+        <td>{{item.email}}</td>
+        <td class="text-right">{{item.age}}</td>
+        <td>{{item.city | uppercase}}</td>
+    </tr>
+    </tbody>
+</table>
