--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="form-group row">
 					<div class="col-sm-10 col-lg-2">
-						<button type="submit" (click)="doLogin()" class="btn btn-primary">Signup</button>
+						<button type="submit" class="btn btn-primary">Signup</button>
 					</div>
 					<div class="col-lg-8">
 						<span *ngIf="errors.credentials" class="text-danger">{{ errors.credentials }}</span>
